--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://jacksld.github.io/workshop-phu'
+baseURL = 'https://KimIlWoo04.github.io/AWS_Report'
 languageCode = 'en-us'
 title = 'Internship Report'
 theme = 'book'
